update todo list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-todo-form (newTodoItem)="addTodo($event)" >
-</app-todo-form>
-<app-todo-list [todoList]="todoList"></app-todo-list>
+<router-outlet></router-outlet>
+
+<!--<app-todo-form (add)="addTodo($event)" >-->
+<!--</app-todo-form>-->
+<!--<app-todo-list [todoList]="todoList" (deleteTodoItem)="removeTodoItem($event)" ></app-todo-list>-->
