--- a/src/app/todo-form/todo-form.component.html
+++ b/src/app/todo-form/todo-form.component.html
@@ -1,26 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-<body>
 <div class="container">
   <div class="row justify-content-center align-items-center">
     <div class="card w-100 p-0">
       <div class="card-header">
-        <div class="">Todo List</div>
-        <p>Add </p>
+        <p>Add Todo</p>
         <div class="form-group d-flex ">
           <input type="text" class="" [(ngModel)]="todoItem">
           <button type="submit" class="mx-4" (click)="addTodoFrm()">Add</button>
+          <button type="submit" class="mx-8 text-decoration-none"  >
+            <a routerLink="/list">Open Todo List</a>
+          </button>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-</body>
-</html>
