--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -11,7 +11,7 @@
   <tr *ngFor="let item of todoList">
     <td scope="row">{{item.id}}</td>
     <td>{{item.title}}</td>
-    <td> <button type="submit" class="mx-4 btn btn-danger" >Delete</button></td>
+    <td> <button type="submit" class="mx-4 btn btn-danger" (click)="delete(item.id)">Delete</button></td>
   </tr>
   </tbody>
 </table>
